--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lesson",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://lms.scutnc.cn",
+  "proxy": "http://lms.scutnc.cn",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
